infrastructure/configs/longhorn/metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: longhorn-manager-metrics
  namespace: longhorn-system
  labels: { app: longhorn-manager }
spec:
  clusterIP: None
  selector:
    app: longhorn-manager
  ports:
    - name: metrics
      port: 9500
      targetPort: 9500
